[package]
name = "monty-rs"
version = "0.1.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smallvec = "1.4.1"
xorshift = "0.1.3"
tinyvec = "0.4.1"
rayon = "1.3.1"
derive_more = "0.99.9"
num_cpus = "1.13.0"
num-format = "0.4.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_play"
harness = false
