[package]
name = "monty-rs"
version = "0.2.0"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "0.4.1"
derive_more = "0.99.9"
num_cpus = "1.13.0"
num-format = "0.4.0"
rand_xorshift = "0.2.0"
rand_core = "0.5.1"

[dev-dependencies]
criterion = "0.3"
assert_approx_eq = "1.1.0"
rand = { version = "0.7.3", features = ["small_rng"]}
rand_xoshiro = "0.4.0"

[[bench]]
name = "bench_play"
harness = false

[profile.bench]
lto = "fat"

[profile.release]
lto = "fat"
codegen-units = 1