[package]
name = "monty-rs"
version = "0.2.1"
authors = ["Emil Thorenfeldt <emt@magenta-aps.dk>"]
edition = "2018"

[features]
default = ["tinyvec"]


[dependencies]
derive_more = "0.99.9"
num_cpus = "1.13.0"
num-format = "0.4.0"
rand_xorshift = "0.2.0"
rand_core = "0.5.1"
libc-print = "0.1.13"
tinyvec = { version = "0.4.1", optional = true}
tinyvec_v1 = { version = "1.0.1", optional = true, package = "tinyvec"}
smallvec = { version = "1.4.2", optional = true}

[dev-dependencies]
criterion = "0.3"
assert_approx_eq = "1.1.0"
rand = { version = "0.7.3", features = ["small_rng"]}
rand_xoshiro = "0.4.0"

[[bench]]
name = "iters"
harness = false

[[bench]]
name = "rngs"
harness = false

[profile.bench]
lto = "fat"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true
